connected to heroku backed commit

--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
                 <h2>CONTACT US</h2>
                 <p class="section-subtitle"><span>Here i am</span></p>
                 <div class="row">
-                    <form id="myform" method="post" action="http://127.0.0.1:8000/">
+                    <form id="myform" method="post" action="https://cyclebackend.herokuapp.com/">
                         <div class="col-md-4">
                             <input class="form-control" type="text" placeholder="Name" id='name' name='name' required>
                         </div>
