email and number updated

--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
     <!-- End Header -->
     <div style="margin-top: 20px; font:message-box; margin-right: 20px;" class="text-right">
                     
-        <p style="color:red">Call Us <a href="tel:+918169903514">+918169903514</a></p>
-        <p style="color:red">Email Us <a href="mailto:gsanket0903gmail.com"> gsanket0903gmail.com</a></p>
+        <p style="color:red">Call Us <a href="tel:+917400225244">+917400225244</a></p>
+        <p style="color:red">Email Us <a href="mailto:rahul022gaikwad@gmail.com"> rahul022gaikwad@gmail.com</a></p>
     </div>
     <!-- Main content -->
     <main id="main" class="site-main">
@@ -686,8 +686,8 @@
                 <p class="section-subtitle"><span>OR</span></p>
                 <div style="margin-top: 20px;" class="text-center">
                     
-                    <p style="color:red">Call Us <a href="tel:+918169903514">+918169903514</a></p>
-                    <p style="color:red">Email Us <a href = "mailto:gsanket0903gmail.com"> gsanket0903gmail.com</a></p>
+                    <p style="color:red">Call Us <a href="tel:+917400225244">+917400225244</a></p>
+                    <p style="color:red">Email Us <a href = "mailto:rahul022gaikwad@gmail.com"> rahul022gaikwad@gmail.com</a></p>
                 </div>
             </div>
         </section><!-- /.section-contact-->
