--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Rcycles</title>
+    <title>Cycle Repair and Services In mumabi : It is a best cycle repair service in 2022 what ever your cycle repair need maybe rcycles got you covered </title>
 
     <meta name="description" content="">
     <meta name="author" content="">
@@ -98,7 +98,7 @@
             <!-- <h1>I am John Smith</h1> -->
             <!-- <p class="hero-job"><span>Premium Quality
                 </span></p> -->
-            <p class="hero-job">Cycle Repair & Services</p>
+            <h1 class="hero-job">Cycle Repair & Services</h1>
             <div class="text-center  page-scroll">
                 <a href="#contact" class=" btn btn-primary">Enquire Now</a>
             </div>
