--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Cycle Repair and Services In mumabi : It is a best cycle repair service in 2022 what ever your cycle repair need maybe rcycles got you covered </title>
+    <title>Cycle Repair and Services In mumabi : It is a best Cycle repair service in 2022 what ever your cycle repair need maybe rcycles got you covered </title>
 
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Cycle Repair and Services In mumabi : It is a best cycle repair service in 2022 what ever your cycle repair need maybe rcycles got you covered, we are professional cycle repair and services in mumbai  ">
+    <meta name="author" content="Rahul Gaikwad (professional cycle mechnique)">
+    <meta name="keywords" content="get cycle repaired at home, repair cycles at home in mumbai,city cycles, cycles race in mumbai, repair cycles at home, cycles repair in mumbai,rcycles,mumbai pune cycle race,flat tyre,cycle repair, best cycle repair, Road bikes, MTB bikes, full Servicing, cycles cleaning, cycles services,cycle repair services">
 
     <!-- Mobile Specific Metas
     ================================================== -->
@@ -64,7 +64,7 @@
     <link rel="apple-touch-icon" sizes="144x144" href="assets/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/logo32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/logo16.png">
-    <link rel="icon" sizes="16x16" href="assets/img/favicon.ico">
+    <link rel="icon" sizes="16x16" href="assets/img/logo16.png">
     <link rel="manifest" href="assets/img/manifest.json">
     <link rel="mask-icon" href="assets/img/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="theme-color" content="#ffffff">
@@ -194,7 +194,7 @@
 
             <div class="container-fluid">
                 <h2>SERVICES WE OFFER</h2>
-                <p class="section-subtitle"><span>Exceptional level of service</span></p>
+                <p class="section-subtitle"><span>Exceptional level of services</span></p>
             </div>
 
             <div class="container">
@@ -278,7 +278,7 @@
                                                 Oiling
                                             </li>
                                             <li><i class="fa fa-check-circle" aria-hidden="true"></i>
-                                                Total bike check
+                                                Total Bicycle check
                                             </li>
                                             
                                         </ul>
@@ -338,7 +338,7 @@
                                                     Oiling
                                                 </li>
                                                 <li><i class="fa fa-check-circle" aria-hidden="true"></i>
-                                                    Total bike check
+                                                    Total Bycycle check
                                                 </li>
                                                 <li><i class="fa fa-check-circle" aria-hidden="true"></i>
                                                     Wheel Through
@@ -352,7 +352,7 @@
                                                     Front and Rear wheel full service
                                                 </li>
                                                 <li><i class="fa fa-check-circle" aria-hidden="true"></i>
-                                                    Break cable Service
+                                                    Break cable service
                                                 </li>
                                                 
                                             </ul>
