--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Cycle Repair and Services In mumabi : It is a best Cycle repair service in 2022 what ever your cycle repair need maybe rcycles got you covered </title>
+    <title>Bicycle Repair & Services Mumbai | Cycle Repair and Services In mumabi : It is a best Cycle repair service in 2022 what ever your cycle repair need maybe rcycles got you covered</title>
 
-    <meta name="description" content="Cycle Repair and Services In mumabi : It is a best cycle repair service in 2022 what ever your cycle repair need maybe rcycles got you covered, we are professional cycle repair and services in mumbai  ">
+    <meta name="description" content="Cycle Repair and Services In mumabi : We are the best cycle repair service in 2022 what ever your cycle repair need maybe rcycles got you covered, we are professional cycle repair and services in mumbai, book a visite and we will Visit you. call or email to book cycle repair visit">
     <meta name="author" content="Rahul Gaikwad (professional cycle mechnique)">
-    <meta name="keywords" content="get cycle repaired at home, repair cycles at home in mumbai,city cycles, cycles race in mumbai, repair cycles at home, cycles repair in mumbai,rcycles,mumbai pune cycle race,flat tyre,cycle repair, best cycle repair, Road bikes, MTB bikes, full Servicing, cycles cleaning, cycles services,cycle repair services">
+    <meta name="keywords" content="Bicycle Repair & Services Mumbai ,get cycle repaired at home, repair cycles at home in mumbai,city cycles, cycles race in mumbai, repair cycles at home, cycles repair in mumbai,rcycles,mumbai pune cycle race,flat tyre,cycle repair, best cycle repair, Road bikes, MTB bikes, full Servicing, cycles cleaning, cycles services,cycle repair services, cycling diat, cycling traning">
 
     <!-- Mobile Specific Metas
     ================================================== -->
