--- a/index.html
+++ b/index.html
@@ -293,10 +293,10 @@
                                         <div class="row">
                                             <ul class="col-md-6 col-sm-6 col-xs-6">
                                                 <li><i class="fa fa-check-circle" aria-hidden="true"></i>
-                                                     Break  Setting
+                                                     Break  setting
                                                 </li>
                                                 <li><i class="fa fa-check-circle" aria-hidden="true"></i>
-                                                    Gear  Setting
+                                                    Gear  setting
                                                 </li>
                                                 <li><i class="fa fa-check-circle" aria-hidden="true"></i>
                                                     Air pressure check  
@@ -308,7 +308,7 @@
                                                     Total Bycycle check
                                                 </li>
                                                 <li><i class="fa fa-check-circle" aria-hidden="true"></i>
-                                                    Wheel Through
+                                                    Wheel true service
                                                 </li>
                                             </ul>
                                             <ul class="col-md-6 col-sm-6 col-xs-6">
@@ -385,7 +385,7 @@
                                                     Total bike check
                                                 </li>
                                                 <li><i class="fa fa-check-circle" aria-hidden="true"></i>
-                                                    Wheel Through
+                                                    Wheel true service 
                                                 </li>
                                                 <li><i class="fa fa-check-circle" aria-hidden="true"></i>
                                                     Any tyre related work 
@@ -396,16 +396,16 @@
                                                     Front and Rear wheel full service
                                                 </li>
                                                 <li><i class="fa fa-check-circle" aria-hidden="true"></i>
-                                                    Break cable Service
+                                                    Break cable service
                                                 </li>
                                                 <li><i class="fa fa-check-circle" aria-hidden="true"></i>
-                                                    Head Set Servicing
+                                                    Head Set servicing
                                                 </li>
                                                 <li><i class="fa fa-check-circle" aria-hidden="true"></i>
-                                                    Bottom Servicing
+                                                    Bottom servicing
                                                 </li>
                                                 <li><i class="fa fa-check-circle" aria-hidden="true"></i>
-                                                    Full shampoo washing
+                                                    Full shampoo wash
                                                 </li>
                                                
                                             </ul>
@@ -719,7 +719,7 @@
         </div>
 
         <div class="container text-center">
-            <p class="copyright">&copy; <a href="http://pixelperfect.mk/" target="_blank">Rcycles</a> - 2022</p>
+            <p class="copyright">&copy; Rcycles</a> - 2022</p>
         </div>
 
     </footer><!-- /#footer -->
