--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  padding-top: 100px; /* Location of the box */ 
   left: 0;
   top: 0;
   width: 100%; /* Full width */
@@ -53,15 +53,21 @@
     ================================================== -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <title>Bicycle Repair & Services Mumbai | Cycle Repair and Services In Mumbai: It is the best Cycle repair service in 2022. Whatever your cycle repair need maybe rcycles got you covered
-
-    </title>
-
-    <meta name="description" content="Cycle Repair and Services In mumabi : We are the best cycle repair service in 2022 what ever your cycle repair need maybe rcycles got you covered, we are professional cycle repair and services in mumbai, book a visite and we will Visit you. call or email to book cycle repair visit">
+    <meta name="referrer" content="origin">
+    <title>Rahul Cycle Repair & Services - Bicycle Repair & Services At Home Mumbai</title>
+    <link rel="canonical" href="https://rcycles.in/">
+    <meta charset="utf-8">
+    <meta name="description" content="Bicycle Repair in Mumbai">
     <meta name="author" content="Rahul Gaikwad (professional cycle mechnique)">
-    <meta name="keywords" content="Bicycle Repair & Services Mumbai ,get cycle repaired at home, repair cycles at home in mumbai,city cycles, cycles race in mumbai, repair cycles at home, cycles repair in mumbai,rcycles,mumbai pune cycle race,flat tyre,cycle repair, best cycle repair, Road bikes, MTB bikes, full Servicing, cycles cleaning, cycles services,cycle repair services, cycling diat, cycling traning">
-
+    <meta name="keywords" content="Rahul Cycle Repair & Services,Bicycle Repair & Services At Home Mumbai, Bicycle Repair in Mumbai,cycle repair home service near me, Rahul Cycle Repair & Services,cycle repair near me, Bicycle Repair & Services in Mumbai ,get cycle repaired at home, repair cycles at home in mumbai,city cycles, cycles race in mumbai, repair cycles at home, cycles repair in mumbai,rcycles,mumbai pune cycle race,flat tyre,cycle repair, best cycle repair, Road bikes, MTB bikes, full Servicing, cycles cleaning, cycles services,cycle repair services, cycling diat, cycling traning">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://rcycles.in/">
+    <meta property="og:title" content="Rahul Cycle Repair & Services">
+    <meta property="og:description" content="Bicycle Repair in Mumbai">
+    <meta property="og:image"
+        content="assets/img/logo16.png">
+    <meta property="og:image:width" content="314">
+    <meta property="og:image:height" content="176">
     <!-- Mobile Specific Metas
     ================================================== -->
     <meta name="viewport" content="width=device-width, minimum-scale=1.0">
@@ -109,7 +115,9 @@
             <!-- <h1>I am John Smith</h1> -->
             <!-- <p class="hero-job"><span>Premium Quality
                 </span></p> -->
-            <h1 class="hero-job">Cycle Repair & Services</h1>
+            <h1 class="hero-job">Rahul Cycle Repair & Services</h1>
+            <p class=".hero-job-desc">Bicycle Repair in Mumbai -Ccycle Repair Service At Home</p>
+            
             <div class="text-center  page-scroll">
                 <a href="#contact" class=" btn btn-primary">Enquire Now</a>
             </div>
@@ -176,7 +184,7 @@
     <div style="margin-top: 20px; font:message-box; margin-right: 20px;" class="text-right">
                     
         <p style="color:red">Call Us <a href="tel:+917400225244">+917400225244</a></p>
-        <p style="color:red">Email Us <a href="mailto:rahul022gaikwad@gmail.com"> rahul022gaikwad@gmail.com</a></p>
+        <p style="color:red">Email Us <a href="mailto:rahul022gaikwad@gmail.com">rahul022gaikwad@gmail.com</a></p>
     </div>
     <!-- Main content -->
     <main id="main" class="site-main">
