--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <!-- <p class="hero-job"><span>Premium Quality
                 </span></p> -->
             <h1 class="hero-job">Rahul Cycle Repair & Services</h1>
-            <p class=".hero-job-desc">Bicycle Repair in Mumbai -Ccycle Repair Service At Home</p>
+            <p class=".hero-job-desc">Bicycle Repair in Mumbai - Cycle Repair Service At Home</p>
             
             <div class="text-center  page-scroll">
                 <a href="#contact" class=" btn btn-primary">Enquire Now</a>
